Majority of alignment issues fixed

--- a/Elinic/Content/Site.css
+++ b/Elinic/Content/Site.css
@@ -123,7 +123,7 @@ h5, h6
 .content-wrapper
 {
     margin: 0 auto;
-    max-width: 960px;
+    max-width: 100%;
 }
 
 #body
